CSS: Fix vertical tables with big values stretching the page section.

--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -235,6 +235,7 @@ small {
 table.vertical th,
 table.vertical td {
     text-align: left;
+    white-space: normal;
 }
 
 table.vertical th {
